some improvements; added graphic output

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 2017-12-13-dynS6V/test_Hfout1.txt
 2017-12-13-dynS6V/test_Hfout2.txt
 2017-12-15-PushTASEP-multilayer/conf-out1.txt
+2017-12-15-PushTASEP-multilayer/multilayer-pushtasep1.txt
+2017-12-15-PushTASEP-multilayer/multilayer-pushtasep-graph1.png
