--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 2017-12-15-PushTASEP-multilayer/conf-out1.txt
 2017-12-15-PushTASEP-multilayer/multilayer-pushtasep1.txt
 2017-12-15-PushTASEP-multilayer/multilayer-pushtasep-graph1.png
+2017-12-30-PushTASEP-colRSK/multilayer-pushtasep-RSK-1.txt
+2017-12-30-PushTASEP-colRSK/multilayer-pushtasep-RSK-graph-1.png
+2017-12-30-PushTASEP-colRSK/multilayer-pushtasep-graph1.png
+2017-12-30-PushTASEP-colRSK/multilayer-pushtasep1.txt
