ignore results; change some parameters

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 2017-12-30-PushTASEP-colRSK/multilayer-pushtasep-RSK-graph-1.png
 2017-12-30-PushTASEP-colRSK/multilayer-pushtasep-graph1.png
 2017-12-30-PushTASEP-colRSK/multilayer-pushtasep1.txt
+2018-02-10-PushTASEP-single/single-pushtasep-12.txt
+2018-02-10-PushTASEP-single/single-pushtasep-6.txt
